Completed grammar for pseudo boolean formulas and added 2 tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,6 +26,14 @@ add_executable(test-nnf-3 test-nnf-3.cpp
                ${ANTLR_GrammarLexer_CXX_OUTPUTS}
                ${ANTLR_GrammarParser_CXX_OUTPUTS}
                ${SOURCE})
+add_executable(test-propositional-formula test-propositional-formula.cpp
+               ${ANTLR_GrammarLexer_CXX_OUTPUTS}
+               ${ANTLR_GrammarParser_CXX_OUTPUTS}
+               ${SOURCE})
+add_executable(test-pseudo-boolean-formula test-pseudo-boolean-formula.cpp
+               ${ANTLR_GrammarLexer_CXX_OUTPUTS}
+               ${ANTLR_GrammarParser_CXX_OUTPUTS}
+               ${SOURCE})
 
 target_link_libraries(test-sample-formula antlr4_static)
 target_link_libraries(test-formula-tree antlr4_static)
@@ -34,6 +42,7 @@ target_link_libraries(test-leaf-configs-2 antlr4_static)
 target_link_libraries(test-nnf antlr4_static)
 target_link_libraries(test-nnf-2 antlr4_static)
 target_link_libraries(test-nnf-3 antlr4_static)
-
+target_link_libraries(test-pseudo-boolean-formula antlr4_static)
+target_link_libraries(test-propositional-formula antlr4_static)
 
 
