--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,6 +34,11 @@ add_executable(test-pseudo-boolean-formula test-pseudo-boolean-formula.cpp
                ${ANTLR_GrammarLexer_CXX_OUTPUTS}
                ${ANTLR_GrammarParser_CXX_OUTPUTS}
                ${SOURCE})
+add_executable(test-substitute test-substitute.cpp
+               ${ANTLR_GrammarLexer_CXX_OUTPUTS}
+               ${ANTLR_GrammarParser_CXX_OUTPUTS}
+               ${SOURCE})
+
 
 target_link_libraries(test-sample-formula antlr4_static)
 target_link_libraries(test-formula-tree antlr4_static)
@@ -44,5 +49,4 @@ target_link_libraries(test-nnf-2 antlr4_static)
 target_link_libraries(test-nnf-3 antlr4_static)
 target_link_libraries(test-pseudo-boolean-formula antlr4_static)
 target_link_libraries(test-propositional-formula antlr4_static)
-
-
+target_link_libraries(test-substitute antlr4_static)
