--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -42,6 +42,10 @@ add_executable(test-substitute-2 test-substitute-2.cpp
                ${ANTLR_GrammarLexer_CXX_OUTPUTS}
                ${ANTLR_GrammarParser_CXX_OUTPUTS}
                ${SOURCE})
+add_executable(test-performance test-performance.cpp
+               ${ANTLR_GrammarLexer_CXX_OUTPUTS}
+               ${ANTLR_GrammarParser_CXX_OUTPUTS}
+               ${SOURCE})
 
 
 target_link_libraries(test-sample-formula antlr4_static)
@@ -55,4 +59,5 @@ target_link_libraries(test-pseudo-boolean-formula antlr4_static)
 target_link_libraries(test-propositional-formula antlr4_static)
 target_link_libraries(test-substitute antlr4_static)
 target_link_libraries(test-substitute-2 antlr4_static)
+target_link_libraries(test-performance antlr4_static)
 
