--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,14 @@ add_executable(test-performance test-performance.cpp
                ${ANTLR_GrammarLexer_CXX_OUTPUTS}
                ${ANTLR_GrammarParser_CXX_OUTPUTS}
                ${SOURCE})
+add_executable(test-formula-tree-2 test-formula-tree-2.cpp
+               ${ANTLR_GrammarLexer_CXX_OUTPUTS}
+               ${ANTLR_GrammarParser_CXX_OUTPUTS}
+               ${SOURCE})
+add_executable(test-formula-tree-3 test-formula-tree-3.cpp
+               ${ANTLR_GrammarLexer_CXX_OUTPUTS}
+               ${ANTLR_GrammarParser_CXX_OUTPUTS}
+               ${SOURCE})
 
 
 target_link_libraries(test-sample-formula antlr4_static)
@@ -60,4 +68,5 @@ target_link_libraries(test-propositional-formula antlr4_static)
 target_link_libraries(test-substitute antlr4_static)
 target_link_libraries(test-substitute-2 antlr4_static)
 target_link_libraries(test-performance antlr4_static)
-
+target_link_libraries(test-formula-tree-2 antlr4_static)
+target_link_libraries(test-formula-tree-3 antlr4_static)
