--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: actions-setup-cmake
+      uses: jwlawson/actions-setup-cmake@v1.2
+      with:
+        cmake-version: '3.7.x'
     - name: configure
       run: mkdir build && cd build && cmake ..
     - name: build
